--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "node": ">=0.4.0"
     },
     "scripts": {
-        "test": "mocha -R spec test/test.js"
+        "test": "mocha -R spec test/test.js",
+        "coverage": "istanbul cover test/cover.js"
     }
 }
