--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "engines": {
         "node": ">=0.4.0"
     },
+    "devDependencies": {
+        "mocha": ">=1.6.0",
+        "istanbul": ">=0.1.11" 
+    },
     "scripts": {
         "test": "mocha -R spec test/test.js",
         "coverage": "istanbul cover test/cover.js"
