--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     },
     "devDependencies": {
         "mocha": ">=1.6.0",
-        "istanbul": ">=0.1.11" 
+        "istanbul": ">=0.1.11" ,
+        "uglify-js": "1.3.3"
     },
     "scripts": {
         "test": "mocha -R spec test/test.js",
