--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "istanbul": ">=0.1.11" ,
         "uglify-js": "1.3.3"
     },
+    "license": "BSD",
     "scripts": {
         "test": "mocha -R spec test/test.js",
         "coverage": "istanbul cover test/cover.js"
