--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "mocha": ">=1.6.0",
         "browserify": "~1.16.6",
         "istanbul": ">=0.1.11",
-        "uglify-js": "1.3.3"
+        "uglify-js": "1.3.3",
+        "expect.js": ">=0.1.2"
     },
     "license": "BSD",
     "scripts": {
