Rename to fidola

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "fast.js",
+    "name": "fidola.js",
     "description": "Fast, Tested Algorithms in JavaScript",
     "homepage": "",
     "version": "0.0.1-dev",
