--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "uglify-js": "1.3.3",
         "expect.js": ">=0.1.2"
     },
-    "license": "BSD",
+    "license": "BSD-2-Clause",
     "scripts": {
         "test": "mocha -R spec test/test.js && npm run-script coverage",
         "coverage": "npm run-script analyze-coverage && npm run-script check-coverage",
